# wordbase-player

./: .gitignore  .gitmodules  AGENTS.md  README.md  benchmark-progress.csv
logs/agent-loop/worker-1/: benchmark-progress.csv
logs/agent-loop/worker-2/: benchmark-progress.csv
logs/agent-loop/worker-3/: benchmark-progress.csv
logs/agent-loop/worker-4/: benchmark-progress.csv
ml/: EXPERIMENTS.md  train_policy.py
ml/checkpoints/: wordbase_policy.pt
scripts/: agent-add-task.sh  agent-fleet-monitor.py  agent-fleet-status.sh  agent-fleet.sh  agent-loop.sh  agent-master.sh  benchmark-board-suite.txt  run-benchmarks.sh
src/: CMakeLists.txt  board.h  cli-smoke.cmake.in  coordinate-list.h  decrypt.cpp  decrypt.h  driver.cpp  easylogging++.h  example.cpp  grid.h  gtsa.hpp  inline-bitset.h  move-sequence.h  neural-eval.h  notes  parallel-search.h  perf-test.cpp  server.cpp  simplesql.h  string-util.h  test-namespace.cpp  test-simd.cpp  twl06_with_wordbase_additions.txt  word-dictionary.h  wordbase-move.h  wordbaseapp-db.h  wordescape.cpp
web/: App.tsx  app.json  engine-server.js  package-lock.json  package.json
web/src/components/: Board.tsx  Confetti.tsx  Header.tsx  MoveHistory.tsx  Tile.tsx
web/src/game/: BoardGenerator.ts  Dictionary.ts  GameEngine.ts  types.ts
web/src/screens/: GameScreen.tsx  HomeScreen.tsx
